Created Sign up page

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script async defer crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0&appId=248752947914523&autoLogAppEvents=1"
+      nonce="PivbjBKI"></script>
+    <div id="fb-root"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
